@@ -328,25 +328,33 @@ class Application extends BaseApplication
         $tempVarDir = sys_get_temp_dir() . DIRECTORY_SEPARATOR . 'magento' . DIRECTORY_SEPARATOR .  'var';
 
         if (is_dir($tempVarDir)) {
-            if ($this->initMagento()) {
-                $configOptions = new \Mage_Core_Model_Config_Options();
-                $currentVarDir = $configOptions->getVarDir();
+            $this->detectMagento();
+            /* If magento is not installed yet, don't check */
+            if ($this->_magentoRootFolder !== null
+                && !file_exists($this->_magentoRootFolder . '/app/etc/local.xml')
+            ) {
+                return;
+            }
 
-                if ($currentVarDir == $tempVarDir) {
-                    $output->writeln(sprintf('<error>Fallback folder %s is used in n98-magerun</error>', $tempVarDir));
-                    $output->writeln('');
-                    $output->writeln('n98-magerun is using the fallback folder. If there is another folder configured for Magento, this can cause serious problems.');
-                    $output->writeln('Please refer to https://github.com/netz98/n98-magerun/wiki/File-system-permissions for more information.');
-                    $output->writeln('');
-                } else {
-                    $output->writeln(sprintf('<error>Folder %s found, but not used in n98-magerun</error>', $tempVarDir));
-                    $output->writeln('');
-                    $output->writeln(sprintf('This might cause serious problems. n98-magerun is using the configured var-folder <comment>%s</comment>', $currentVarDir));
-                    $output->writeln('Please refer to https://github.com/netz98/n98-magerun/wiki/File-system-permissions for more information.');
-                    $output->writeln('');
+            $this->initMagento();
 
-                    return false;
-                }
+            $configOptions = new \Mage_Core_Model_Config_Options();
+            $currentVarDir = $configOptions->getVarDir();
+
+            if ($currentVarDir == $tempVarDir) {
+                $output->writeln(sprintf('<error>Fallback folder %s is used in n98-magerun</error>', $tempVarDir));
+                $output->writeln('');
+                $output->writeln('n98-magerun is using the fallback folder. If there is another folder configured for Magento, this can cause serious problems.');
+                $output->writeln('Please refer to https://github.com/netz98/n98-magerun/wiki/File-system-permissions for more information.');
+                $output->writeln('');
+            } else {
+                $output->writeln(sprintf('<error>Folder %s found, but not used in n98-magerun</error>', $tempVarDir));
+                $output->writeln('');
+                $output->writeln(sprintf('This might cause serious problems. n98-magerun is using the configured var-folder <comment>%s</comment>', $currentVarDir));
+                $output->writeln('Please refer to https://github.com/netz98/n98-magerun/wiki/File-system-permissions for more information.');
+                $output->writeln('');
+
+                return false;
             }
         }
     }
